@startuml classes
class Program{
    + Main() : void
}

class Scripture {
    - _words : List<Word>
 
    + Scripture(words : List<Word>)
    + GetWords(s : Scripture) : List<Word>
    + Display(s : Scripture) : void
    + HideWords(s : Scripture) : void
}

class Reference{
    - _book : string
    - _chapter : int
    - _startVerse : int
    - _endVerse : int

    + Reference(b : string, c : int, v : int)
    + Reference(b : string, c : int, vFirst : int, vLast : int)
    + CreateReference() : void
    + GetReference() : string
}

class Word{
    - _word : string
    - _isHidden : bool
    
    + Word(w : string)
    + ProcessQuote(quote : string) : List<Word>
    + GetWords(quote : string) : Word : List<Word>
    + GetWord(w : Word) : string
    + HideWord(w : Word) : void
    + IsHidden(w : Word) : bool
    + CheckLeftToHide(words : List<Word>) : int
}

Program *-- Scripture : > Displays scripture using
Scripture *-- Word : > Gets words from
Scripture *-- Reference : > Gets reference from

@enduml